<resources>
    <string name="app_name">Sem_A_Final_Proj</string>
    <string name="Learnize">Learnizer</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="click_here_to_signup">Click Here To SignUp</string>
    <string name="singup">SingUp</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="enter_username">Enter UserName</string>
    <string-array name="College_array">
        <item>Ruppin</item>
        <item>Hifa</item>
        <item>Tel Aviv</item>
    </string-array>
    <string name="hello_username">Hello UserName</string>
    <string name="messages">Messages</string>
    <string name="ruppin">Ruppin</string>
    <string name="https_mtr_ruppin_ac_il">https://mtr.ruppin.ac.il/</string>
    <string name="slogan">BEST FOR STUDENT\'S</string>
    <string name="welcome_back_username">Welcome Back UserName!!</string>
    <string name="nav_home">HOME</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_your_study_schedule">Your Study Schedule</string>
    <string name="nav_grades">Grades</string>
    <string name="nav_exams">Exams</string>
    <string name="nav_settings">Setting</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_scholarship">Scholarship</string>
    <string name="nav_latest_scholarship">Latest Scholarship</string>
    <string name="grades">Grades</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">Change Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="subject">Subject</string>
    <string name="lecturer">Lecturer</string>
    <string name="grade">Grade</string>
    <string name="subject_android_studio">Android Studio</string>
    <string name="subject_python">Python</string>
    <string name="subject_react">React</string>
    <string name="subject_c">C#</string>
    <string name="subject_sql">SQL</string>
    <string name="subject_linux">Linux</string>
    <string name="lecturer_royi_jurno">Royi Jurno</string>
    <string name="grade_100">100</string>
    <string name="lecturer_han_nir">Han Nir</string>
    <string name="lecturer_anita_ullman">Anita Ullman</string>
    <string name="grade_98">98</string>
    <string name="lecturer_tami_zuckerman">Tami Zuckerman</string>
    <string name="subject_data_structure">Data Structure</string>
    <string name="lecturer_sumilan_maqalda">Sumilan Maqalda</string>
    <string name="grade_not_yet">Not Yet</string>
    <string name="subject_system_analysis">System Analysis</string>
    <string name="lecturer_adi_zimmerman">Adi Zimmerman</string>
    <string name="there_is_a_submission_of_a_new_work_on_the_website_of_the_course_analysis_systems">There is a submission of a new work on the website of the course Analysis Systems</string>
    <string name="an_online_lesson_reminder_that_will_start_in_a_few_minutes_sql_databases">An online lesson reminder that will start in a few minutes - SQL Databases</string>
    <string name="work_submission_permit_student_username">Work submission permit, Student: Username</string>
    <string name="invitation_to_an_online_meeting_on_full_stack_react_ui">Invitation to an online meeting on Full Stack-React-UI</string>
    <string name="a_reminder_of_an_online_lesson_that_will_begin_in_a_few_more_minutes_developing_applications_for_android">A reminder of an online lesson that will begin in a few more minutes - developing applications for Android</string>
    <string name="mosaab_abo_rkia_has_joined_your_personal_meeting_room">Mosaab Abo Rkia has joined your Personal Meeting Room.</string>
    <string name="hours_of_operation_of_administrative_offices">===Hours of operation of administrative offices===</string>
    <string name="x">X</string>
    <string name="study_schedule">Study Schedule</string>
    <string name="_8_00">8:00</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="object_oriented">Object Oriented</string>
    <string name="_8_45">8:45</string>
    <string name="_9_45">9:45</string>
    <string name="_10_45">10:45</string>
    <string name="linux">Linux</string>
    <string name="_12_00">12:00</string>
    <string name="exams">Exams</string>
    <string name="course">Course</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="_8_12_2021">8/12/2021</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="_21_2_2021">21/2/2021</string>
    <string name="_14_30_am">14:30 AM</string>
    <string name="_24_2_2021">24/2/2021</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="_26_2_2021">26/2/2021</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="_17_00_am">17:00 AM</string>
    <string name="_30_2_2021">30/2/2021</string>
    <string name="qa">QA</string>
    <string name="shay_avraham">Shay Avraham</string>
    <string name="textview_1">TextView 1</string>
    <string name="textview2">TextView2</string>
    <string name="textview_3">TextView 3</string>
    <string name="profile">Profile</string>
    <string name="android_studio">Android Studio</string>
    <string name="username">UserName :</string>
    <string name="change_password">Change Password</string>

</resources>