<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GradesActivity"
    android:id="@+id/drawer_layout">

    <!--Drawer-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/navigationTheme"
        android:background="@color/light_white"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:background="#f2f2f2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/burger_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_icon" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Learnize"
                android:fontFamily="@font/bad_script"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_name"
                android:layout_centerHorizontal="true"
                android:text="@string/slogan"
                android:fontFamily="@font/bad_script"
                android:textColor="@color/black"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grades"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:fontFamily="@font/bad_script"
            android:textColor="@color/black"/>

        <TableLayout

            android:id="@+id/Grades_Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="10dp"
            android:background="#A0A0A0"
            >

            <TableRow android:layout_marginBottom="15dp"
                android:background="#808080">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"
                    android:textStyle="bold"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturer"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"
                    android:textStyle="bold"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </TableRow>

            <TableRow android:layout_marginBottom="15dp"
                      android:background="#E0E0E0">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_android_studio"
                    android:layout_weight="1"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturer_royi_jurno"
                    android:layout_weight="1"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_100"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </TableRow>

            <TableRow android:layout_marginBottom="15dp"
                android:background="#E0E0E0">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_react"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturer_han_nir"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_100"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </TableRow>

            <TableRow android:layout_marginBottom="15dp"
                android:background="#E0E0E0">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_sql"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:text="@string/lecturer_tami_zuckerman"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_100"
                    android:layout_weight="1"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </TableRow>

            <TableRow android:layout_marginBottom="15dp"
                android:background="#E0E0E0">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:text="@string/subject_data_structure"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturer_sumilan_maqalda"
                    android:layout_weight="1"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_not_yet"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>

            <TableRow android:layout_marginBottom="15dp"
                android:background="#E0E0E0">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_c"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturer_anita_ullman"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_98"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </TableRow>

            <TableRow android:background="#E0E0E0">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_system_analysis"
                    android:layout_weight="1"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:text="@string/lecturer_adi_zimmerman"
                    android:layout_weight="1"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_not_yet"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>