<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    android:background="@color/light_grey"
    tools:context=".SingupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/Learnize"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/singup"
        android:textSize="24sp"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:orientation="horizontal"
        android:weightSum="5">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImg"
                android:layout_width="100dp"
                android:src="@drawable/userimage"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:civ_border_width="5sp"
                app:civ_border_color="@color/black"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/userName_SignUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/enter_username"
                android:autofillHints="Enter UserName"
                android:textSize="10sp"
                android:inputType="text"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/userEmail_SignUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/enter_email"
                android:autofillHints="Enter Email"
                android:inputType="textEmailAddress"
                android:textSize="10sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/userPassword_SignUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/enter_password"
                android:autofillHints="Enter Password"
                android:textSize="10sp"
                android:inputType="textPassword"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/userRePassword_SignUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/re_enter_password"
                android:autofillHints="Re-Enter Password"
                android:textSize="10sp"
                android:inputType="textPassword"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_SignUp"
                    android:layout_width="112dp"
                    android:layout_height="match_parent"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female_SignUp"
                    android:layout_width="138dp"
                    android:layout_height="match_parent"
                    android:text="@string/female" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/CollegeSpinner_SignUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/College_array"
                android:textSize="15sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSignUp_SignUp_page"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/singup"
                android:backgroundTint="#4D190F0F"
                app:cornerRadius="50dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>