<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:id="@+id/drawer_layout">


    <!--Drawer-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/navigationTheme"
        android:background="@color/light_white"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:background="#f2f2f2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/burger_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_icon" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Learnize"
                android:fontFamily="@font/bad_script"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_name"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/bad_script"
                android:text="@string/slogan"
                android:textColor="@color/black"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profileiam"
                android:layout_marginStart="25dp"
                app:civ_border_width="2sp"
                app:civ_border_color="@color/black"/>

            <EditText
                android:id="@+id/ChangeUsername"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/change_username"
                android:fontFamily="@font/allan"
                android:textColor="@color/black"
                android:layout_below="@+id/userImg"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:autofillHints="@string/change_username"/>

            <EditText
                android:id="@+id/ChangeEmail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/change_email"
                android:fontFamily="@font/allan"
                android:textColor="@color/black"
                android:layout_below="@+id/ChangeUsername"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/change_email"/>

            <EditText
                android:id="@+id/changePassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/change_password"
                android:fontFamily="@font/allan"
                android:textColor="@color/black"
                android:layout_below="@+id/ChangeEmail"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:autofillHints="@string/change_password"/>

            <EditText
                android:id="@+id/changeRePassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password"
                android:fontFamily="@font/allan"
                android:textColor="@color/black"
                android:layout_below="@id/changePassword"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:autofillHints="@string/re_enter_password"/>

            <RadioGroup
                android:id="@+id/Genders"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/changeRePassword">

                <RadioButton
                    android:id="@+id/changeMale"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/changeFemale"
                    android:layout_width="100dp"
                    android:fontFamily="@font/allan"
                    android:textColor="@color/black"
                    android:layout_height="match_parent"
                    android:text="@string/female" />
            </RadioGroup>


            <Button
                android:id="@+id/SaveChanges"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"
                android:fontFamily="@font/allan"
                android:textColor="@color/black"
                android:backgroundTint="#4D190F0F"
                android:layout_below="@id/Genders"
                app:cornerRadius="50dp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>